# pygismeteo

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  properdocs.yml  pyproject.toml
.github/workflows/: ci.yml  test.yml
docs/: additions.md  current.md  exceptions.md  get_id_by_query.md  gismeteo.md  index.md  install.md  installation.md  search.md  session.md  step24.md  step3.md  step6.md  types.md  typing.md
docs/dates/: in10_days.md  in3_days.md  in4_days.md  in5_days.md  in6_days.md  in7_days.md  in8_days.md  in9_days.md  month.md  now.md  ten_days.md  three_days.md  today.md  tomorrow.md  two_weeks.md
pygismeteo/: __init__.py  _abc.py  _class.py  _current.py  _fabric.py  _funcs.py  _gismeteo.py  _http.py  _periods.py  _search.py  _step_n.py  exceptions.py  gismeteo.py  http.py  main_class.py  search.py  types.py
pygismeteo/_dates/: abc.py  month.py  now.py  one_day.py  ten_days.py  three_days.py  two_weeks.py
pygismeteo/_endpoints/: current.py  search.py  step24.py  step3.py  step6.py
pygismeteo/dates/: month.py  now.py  one_day.py  ten_days.py  three_days.py  two_weeks.py
src/pygismeteo/: __init__.py  _gismeteo.py  _http.py
src/pygismeteo/_endpoints/: search.py  step24.py  step3.py  step6.py
tests/: conftest.py  test_current.py  test_everything.py  test_exception_and_session.py  test_exceptions.py  test_exceptions_and_session.py  test_get_id_by_query.py  test_gismeteo.py  test_month.py  test_now.py  test_one_day.py  test_pygismeteo.py  test_search.py  test_step24.py  test_step3.py  test_step6.py  test_ten_days.py  test_three_days.py  test_two_weeks.py
