[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "pygismeteo"
version = "6.1.0"
description = "Wrapper for Gismeteo API"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "monosans", email = "hsyqixco@protonmail.com" }]
requires-python = ">=3.8"
classifiers = [
  "Framework :: Pydantic",
  "Framework :: Pydantic :: 2",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: Russian",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "pygismeteo-base>=5.1,<6",
  "requests>=2.26",
  "typing-extensions>=4.4",
]
urls.documentation = "https://pygismeteo.readthedocs.io"
urls.repository = "https://github.com/monosans/pygismeteo"

[tool.hatch.build.targets.sdist]
include = ["pygismeteo"]

[tool.uv]
dev-dependencies = [
  "mkdocs-material==9.5.41",
  "mkdocs-minify-html-plugin==0.2.3",
  "mypy==1.12.0",
  "pytest==8.3.3",
  "ruff==0.6.9",
  "types-requests==2.32.0.20240914",
]
