[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "pygismeteo"
description = "Wrapper for Gismeteo API"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "monosans", email = "hsyqixco@protonmail.com" }]
requires-python = ">=3.9"
classifiers = [
  "Framework :: Pydantic",
  "Framework :: Pydantic :: 2",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: Russian",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = ["httpx", "pygismeteo-base>=6.0.1,<7", "typing-extensions>=4.4"]
urls.documentation = "https://pygismeteo.readthedocs.io"
urls.repository = "https://github.com/monosans/pygismeteo"

[dependency-groups]
dev = ["mypy[faster-cache]==1.13", "pytest==8.3.4", "ruff==0.8.4"]
docs = [
  "black==24.10",
  "mkdocs-material==9.5.49",
  "mkdocs-minify-html-plugin==0.2.3",
  "mkdocstrings==0.27",
  "mkdocstrings-python==1.12.2",
]

[tool.hatch.build.targets.sdist]
include = ["pygismeteo"]

[tool.hatch.version]
path = "pygismeteo/__init__.py"
