[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "pygismeteo"
description = "Wrapper for Gismeteo API"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "monosans", email = "hsyqixco@protonmail.com" }]
requires-python = ">=3.9"
classifiers = [
  "Framework :: Pydantic",
  "Framework :: Pydantic :: 2",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: Russian",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = ["httpx", "pygismeteo-base>=6.0.1,<7", "typing-extensions>=4.4"]
urls.documentation = "https://pygismeteo.readthedocs.io"
urls.repository = "https://github.com/monosans/pygismeteo"

[dependency-groups]
dev = [
  "mypy[faster-cache]==1.16.1",
  "pytest==8.4.1",
  "pytest-github-actions-annotate-failures==0.3",
  "ruff==0.12.1",
]
docs = [
  "mkdocs-material==9.6.14",
  "mkdocs-minify-html-plugin==0.3.1",
  "mkdocstrings==0.29.1",
  "mkdocstrings-python==1.16.12",
  "ruff==0.12.1",
]

[tool.hatch.build.targets.sdist]
include = ["pygismeteo"]

[tool.hatch.version]
path = "src/pygismeteo/__init__.py"
